# aether-station

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DEPLOY.md  Dockerfile  FOUNDRY_IQ_SETUP.md  HOW_IT_WORKS.md  HUGGINGFACE_README.md  JUDGES_GUIDE.md  LICENSE  Makefile  PUBLISH.md  README.md  SAMPLE_TRANSCRIPT.md  SUBMISSION.md  analytics.py  api.py  app.py  audit.py  character_loader.py  character_tools.py  characters.py  cli.py  cost.py  crisis.py  dialogue.py  director.py  drift.py  foundry_iq.py  handover.py  i18n.py  llm.py  mcp_server.py  memo.py  mira_welcome.py  mood.py  (+18 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.streamlit/: config.toml  secrets.toml.example
characters_extra/: README.md  garcia.yaml
deploy/: azure-container-app.bicep
tests/: conftest.py  test_address_forms.py  test_analytics.py  test_analytics_extended.py  test_api.py  test_api_rate_limit.py  test_audit.py  test_bm25.py  test_character_loader.py  test_character_tools.py  test_characters.py  test_cli.py  test_cli_bench.py  test_cli_bench_json.py  test_cli_chat.py  test_cli_crisis.py  test_cli_doctor.py  test_cli_inspect.py  test_cli_lore.py  test_cli_lore_validate.py  test_cli_new_verbs.py  test_cli_smoke.py  test_cli_snapshot.py  test_cost.py  test_crisis.py  test_deploy_artifacts.py  test_dialogue.py  test_director.py  test_drift.py  test_emergency_procedures_lore.py  test_handover.py  test_i18n.py  test_i18n_more_langs.py  test_integration.py  test_llm.py  test_llm_two_sentences.py  test_lore_expansion.py  (+30 more)
(+23 files in other folders)
